# tagchr

./: .gitignore  Cargo.toml  todo.md
src/: info.rs  main.rs
src/app/: app.rs  mod.rs  state.rs  tag.rs
src/ui/: mod.rs  ui.rs
src/ui/home/: screen.rs
src/ui/lyrics/: screen.rs
src/ui/screens/: mod.rs
src/ui/screens/home/: screen.rs
src/ui/screens/lyrics/: screen.rs
src/ui/widgets/: block.rs  mod.rs  modal.rs  paragraph.rs  shortcut.rs  table.rs  text_area.rs  widget.rs
src/ui/widgets/modals/: help.rs  mod.rs  modal.rs  save_result.rs  save_tags.rs
