[package]
name = "tagchr"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.9.0"
chrono = "0.4.40"
clipboard-win = "5.4.0"
crossterm = "0.28.1"
dirs = "6.0.0"
humantime = "2.2.0"
id3 = "1.16.2"
jiff = "0.2.5"
kinded = "0.3.0"
pretty_date = "0.1.2"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
tui-textarea = "0.7.0"
uuid = { version = "1.16.0", features = ["v4"] }
